feat: add coverage script and modify gitignore file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
